# CC98Autosign

./: .gitignore  README.md  config.json.example  log.py  main.py  pyproject.toml  requirements.txt  user.py
.github/workflows/: checkin.yml  release.yml
